# pywebagent

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  run.py
src/pywebagent/: __init__.py  agent.py
src/pywebagent/env/: actions.py  browser.py
src/pywebagent/js/: mark_borders.js  override_file_chooser.js  remove_mark_borders.js
tests/: test_thoroughly.py
